@@ -5,7 +5,36 @@
 \chapter{pyFormex plugins}
 \label{cha:plugins}
 
-This chapter has not been written yet.
+\begin{abstract}
+This chapter describes how to create plugins for \pyformex and documents some of the
+standard plugins that come with the pyFormex distribution.
+\end{abstract}
+
+
+\section{What are \pyformex plugins?}
+\label{sec:plugins-def}
+
+From its inception \pyformex was intended to be easily expandable. Its open 
+architecture allows educated users to change the behavior of \pyformex and to extend its functionality in any way they want. There are no fixed rules to obey and there is no registrar to accept and/or validate the provided plugins. In \pyformex, any  set of functions that are not an essential part of \pyformex can be called a `plugin', if its functionality can usefully be called from elsewhere and if the source can be placed inside the \pyformex distribution.
+
+Thus, we distinct plugins from the vital parts of \pyformex which comprehense the basic data types (Formex), the scripting facilities, the (OpenGL) drawing functionality and the graphical user interface.
+We also distinct plugins from normal (example and user) \pyformex scripts because the latter will usually be intended to execute some specific task, while the former will often only provide some functionality without themselves performing some actions.
+
+To clarify this distinction, plugins are located in a separate subdirectory \texttt{plugins} of the \pyformex tree. This directory should not be used for anything else. 
+
+The extensions provided by the plugins usually fall within one of the following categories:
+\begin{description}
+\item[Functional] Extending the \pyformex functionality by providing new data types and functions.
+\item[External] Providing access to external programs, either by dedicated interfaces or through the command shell and file system.
+\item[GUI] Extending the graphical user interface of \pyformex. 
+\end{description}
+   
+The next section of this chapter gives some recommendations on how to structure the plugins so that they work well with \pyformex. The remainder of the chapter discusses some of the most important plugins included with \pyformex. 
+
+\section{How to create a \pyformex plugin.}
+\label{sec:plugins-create}
+
+
 
 %%% Local Variables: 
 %%% mode: latex
