@@ -24,9 +24,6 @@
 <div id="topfig1">
 </div>
 <div id="topfig2">
-</div>
-  <a href="http://www.noooxml.org/petition"><img src="http://www.noooxml.org/local--files/start/button3.png" border="0" align="right" valign="center"></a>
-</div>
 
 
 <div id="nav">
@@ -101,7 +98,7 @@ News will get inserted here
   
   <hr/>
   
-  <!-- hhmts start -->Last modified: Wed Oct 17 15:15:11 CEST 2007 <!-- hhmts end -->
+  <!-- hhmts start -->Last modified: Mon Nov 12 12:35:15 CET 2007 <!-- hhmts end -->
   
 </div>	
 </div>
