@@ -48,6 +48,8 @@ be changed (mostly where you directly accessed the coordinates attribute f).
 
     - translate(vector,distance) will now translate over vctor*distance,
       not over unitVector(vector)*distance.
+
+    - withProp(val) now also accepts a list/array of property values. 
  
  
 - draw.py:
